# home_credit

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  README.md  config.yaml  index.html  mkdocs.yaml  model_test.py  pyproject.toml  requirements.txt  requirements_docs.txt  test.py
Notebooks/: Optuna test.ipynb  polars_scratch.ipynb
assets/: train_applprev_1_0.parquet_schema.csv  train_applprev_2_report.html  train_applprev_2_schema.csv  train_credit_bureau_a_1_1_schema.csv  train_credit_bureau_a_2_0_report.html  train_credit_bureau_a_2_10_report.html  train_credit_bureau_a_2_1_report.html  train_credit_bureau_a_2_2_report.html  train_credit_bureau_a_2_3_report.html  train_credit_bureau_a_2_4_report.html  train_credit_bureau_a_2_5_report.html  train_credit_bureau_a_2_6_report.html  train_credit_bureau_a_2_6_schema.csv  train_credit_bureau_a_2_9_report.html  train_credit_bureau_b_1_schema.csv  train_credit_bureau_b_2_report.html  train_credit_bureau_b_2_schema.csv  train_debitcard_1_schema.csv  train_deposit_1_report.html  train_deposit_1_schema.csv  train_other_1_report.html  train_person_1_schema.csv  train_person_2_report.html  train_person_2_schema.csv  train_static_0_0_schema.csv  train_tax_registry_a_1_schema.csv  train_tax_registry_b_1_schema.csv  train_tax_registry_c_1_schema.csv
conf/: config.yaml  raw_data_conf.yaml
contribution/: index.html
data/: feature_definitions.csv  sample_submission.csv
docs/: naem.md  report.md  train_applprev_1_0.md  train_applprev_1_1.md  train_applprev_2.md  train_base.md  train_credit_bureau_a_1_0.md  train_credit_bureau_a_1_1.md  train_credit_bureau_a_1_2.md  train_credit_bureau_a_1_3.md  train_credit_bureau_a_2_0.md  train_credit_bureau_a_2_1.md  train_credit_bureau_a_2_10.md  train_credit_bureau_a_2_2.md  train_credit_bureau_a_2_3.md  train_credit_bureau_a_2_4.md  train_credit_bureau_a_2_5.md  train_credit_bureau_a_2_6.md  train_credit_bureau_a_2_7.md  train_credit_bureau_a_2_8.md  train_credit_bureau_a_2_9.md  train_credit_bureau_b_1.md  train_credit_bureau_b_2.md  train_debitcard_1.md  train_deposit_1.md  train_other_1.md  train_person_1.md  train_person_2.md  train_static_0_0.md  train_static_0_1.md  train_static_cb_0.md  train_tax_registry_a_1.md  train_tax_registry_b_1.md  train_tax_registry_c_1.md
(+107 files in other folders)
