[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "home_credit"
version = "0.0.1"
description = "Home credit risk kaggle challenge"
authors = ["Bart van Woesik <bartwoesik1@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.20.1"
pandas = "^1.2.2"
scikit-learn = "^1.4.0"
pytest = "^8.1.1"
pytest-asyncio = "0.23.5"
pytest-cov = "*"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
ruff = "^0.3.7"
mkdocs = "^1.5.3"
seaborn = "*"
optbinning = "*"
mlflow = "*"
optuna = "*"
mylogger = {git = "https://github.com/BartvanWoesik/MyLogger.git"}
model-forge = {git = "https://github.com/BartvanWoesik/model-forge.git"}

[tool.pytest.ini_options]
markers = [
    "unit: Use this mark for all unit tests",
    "integration: Use this mark for all integration tests",
    "end2end: Use this mark for all end-to-end tests",
    "plots: Use this mark for all tests that produce plots",
    "asyncio: Use this mark for all tests concerning async callables"
]
log_cli = "true"
log_level = "DEBUG"
log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

addopts = "--cov=src --cov-report xml --cov-report term-missing"